# MicroWavelet

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  README.md  debug_test.py  files.txt  generate_readme_plot.py  git_files.txt  pyproject.toml
.github/workflows/: lint-fix.yml  publish.yml  release.yml  test.yml
docs/: CONTRIBUTING.md  RELEASE.md
microlens_cwt/: __init__.py  _core.py  _detrending.py  _wavelet.py
microwavelet/: __init__.py  _core.py  _cusum.py  _detrending.py  _fit.py  _noise.py  _wavelet.py
microwavelet/scripts/: cusum_workflow.py
scripts/: bump_version.py  cusum_demo.py  cusum_workflow.py  generate_detrend_plot.py  generate_gp_demo.py  generate_noise_demo.py  generate_readme_plot.py  generate_stamp_peaks.py  reserve_zenodo_doi.py
tests/: test_cusum.py  test_cwt_logic.py  test_fit_anomaly.py  test_new_features.py  test_periodic_robustness.py  test_te_accuracy.py
