[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "microlens-cwt"
version = "0.1.0"
description = "CWT-based anomaly detector for multi-filter microlensing light curves"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "astropy>=5.0",
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["microlens_cwt*"]
