[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MicroWavelet"
version = "26.1.7"
description = "CWT-based anomaly detector for multi-filter microlensing light curves"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dylan Paterson" },
]
keywords = ["astronomy", "microlensing", "wavelet", "time-series", "anomaly-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "astropy>=5.0",
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
dev = [
    "build",
    "matplotlib",
    "pytest",
    "ruff",
    "tomli; python_version < '3.11'",
    "twine",
]

[project.urls]
Homepage = "https://github.com/dylannpaterson/MicroWavelet"
Repository = "https://github.com/dylannpaterson/MicroWavelet"
Issues = "https://github.com/dylannpaterson/MicroWavelet/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["microwavelet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
